# vmsh

./: .drone.yaml  .drone.yml  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  EVALUATION.md  LICENSE  README.md  bors.toml  build.rs  ci.nix  default.nix  deny.toml  flake.nix  justfile  pyproject.toml  qemu_nested.sh  setup.cfg  shell.nix  treefmt.nix  vmsh.nix
.github/workflows/: ci.yml  niv-updates.yml  upgrade-flakes.yml
examples/: test_ioctls.rs
nix/: alpine-db.nix  alpine-image.nix  alpine-sec-scanner-image.nix  alpine-sec-scanner.nix  build-disk-image.nix  busybox-image.nix  fat-image.nix  kernel-deps-no-fhs.nix  kernel-deps.nix  kernel-fhs-shell.nix  kernel-fhs.nix  linux-ioregionfd.nix  measurement-image.nix  minimal-vm.nix  nixng.nix  nixos-image.nix  not-os-image.nix  passwd-image.nix  phoronix-env.nix  phoronix-image.nix  phoronix.nix  sources.json  ssh_key  ssh_key.pub  virtio_mmio.nix  vmsh.nix  xfsdump.nix  xfstests.nix
nix/modules/: configuration.nix  ioregionfd-kernel.nix  measurement-config.nix  nested-qemu.nix  nested-vms.nix  not-os-config.nix  vimrc  zshrc
scripts/: minimal-vm.nix  preprare-linux-debug-build.sh  run-vm.sh
src/: attach.rs  catch_signals.rs  console.rs  coredump.rs  cpu.rs  debug.rs  elf.rs  gdb_break.rs  guest_mem.rs  inject_syscall.rs  inspect.rs  interrutable_thread.rs  kernel.rs  kvm.rs  kvm_ioctls.rs  kvm_memslots.rs  lib.rs  loader.rs  main.rs  page_math.rs  page_table.rs  pidfd.rs  proc.rs  ptrace.rs  ptrace_syscall_info.rs  pty.rs  result.rs  signal_handler.rs  stage1.rs  wrap_syscall.rs
src/build-utils/: Cargo.toml
src/build-utils/src/: lib.rs
src/device/: mmio.rs  mod.rs  threads.rs
src/device/virtio/: LICENSE  mod.rs
src/device/virtio/block/: device.rs  inorder_handler.rs  mod.rs  queue_handler.rs
src/device/virtio/console/: device.rs  inorder_handler.rs  mod.rs  queue_handler.rs
src/devices/: mmio.rs  mod.rs  threads.rs
src/devices/virtio/: mod.rs
src/devices/virtio/block/: device.rs  inorder_handler.rs  mod.rs  queue_handler.rs
src/devices/virtio/console/: console_handler.rs  device.rs  inorder_handler.rs  log_handler.rs  mod.rs  queue_handler.rs  stdin_stdout_device.rs  stdin_stdout_handler.rs
src/ioutils/: Cargo.toml
src/ioutils/src/: lib.rs  shovel.rs  tmp.rs
src/kvm/: allocator.rs  cpus.rs  fd_transfer.rs  hypervisor.rs  ioctls.rs  kvm_ioregionfd.rs  memslots.rs  mod.rs  tracee.rs
src/kvm/hypervisor/: hypervisor.rs  ioevent.rs  ioeventfd.rs  ioregionfd.rs  memory.rs  mod.rs  userspaceioeventfd.rs
src/stage1/: Cargo.toml  Makefile  build.rs  module.c  stage1.h  trampoline.S
src/stage1-freestanding/: Cargo.toml
src/stage1-freestanding/src/: lib.rs
src/stage1-interface/: Cargo.toml
src/stage1-interface/src/: lib.rs
src/stage1-kmod/: Cargo.toml
src/stage1-kmod/.cargo/: config.toml
src/stage1/src/: ffi.rs  lib.rs  printk.rs
src/stage2/: Cargo.toml
src/stage2/src/: block.rs  capabilities.rs  cgroup.rs  cmd.rs  console.rs  dir.rs  kmsg.rs  main.rs  mountns.rs  namespace.rs  pty.rs  result.rs  user_namespace.rs
src/stage2/src/procfs/: mod.rs
src/stage2/src/sys_ext/: mod.rs
src/stage2/src/sys_ext/internal/: mknodat.rs  mod.rs
src/tracer/: inject_syscall.rs  mod.rs  proc.rs  ptrace.rs  ptrace_syscall_info.rs  wrap_syscall.rs
src/virtio/: Cargo.toml
src/virtio/src/: lib.rs
tests/: build-phoronix-cache.sh  confmeasure.py  conftest.py  coredump.py  coredump_analyze.py  coredump_structs.py  cpu_flags.py  docker-images.json  graphs.py  measure_block.py  measure_console.py  measure_helpers.py  measure_phoronix.py  nix.py  phoronix.py  plot.py  procs.py  qemu.py  reproduce.py  root.py  test_alpine.py  test_attach.py  test_chpasswd.py  test_coredump.py  test_firecracker.py  test_help.py  test_hypervisor.py  test_inspect.py  test_ioctl.py  test_ioctl_alloc_mem.py  test_ioctl_guest_add_mem.py  test_ioctl_injection.py  test_ioctl_mmap.py  test_ioeventfd.py  test_stage2.py  test_vcpu_maps.py  test_virtio_blk.py  upload-phoronix-cache.sh  vmsh.py  xfstests.py
tests/debug-kernel-mod/: Makefile  main.c
