[package]
name = "vmsh"
version = "0.1.0"
authors = [
  "Jörg Thalheim <joerg@thalheim.io>",
  "Pogobanane <aenderboy@gmx.de>"
]
edition = "2018"
default-run = "vmsh"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tempfile = "3"

[build-dependencies]
build-utils = { path = "src/build-utils" }

[workspace]
members = ["src/ioutils"]
exclude = [
  "src/build-utils",
  "src/stage1",
  "src/stage1-interface",
  "src/stage2",
]

[dependencies]
#elfloader = { path = "src/rust-elfloader" }
elfloader = "*"
xmas-elf = "*"
clap = { version = "2", default-features = false }
ioutils = { path = "src/ioutils" }
nix = "0.22.*"
libc = "0.2.*"
bitflags = "1.2.1"
stage1-interface = { path = "src/stage1-interface" }

# drops regex dependency -> faster build
# https://github.com/rust-bpf/rust-bcc/pull/179
bcc = { git = "https://github.com/rust-bpf/rust-bcc.git", rev = "f456aa57cd969c241773b872219ea54f1d43bd3b" }
simple-error = "0.2.*"
kvm-bindings = "0.5.*"
env_logger = { version = "0.9.*", default-features = false }
lazy_static = "*"
container-pid = ">=0.2"
num-traits = "0.2"
num-derive = "0.3"

# src/device/ deps:
# Switch back to upstream, once https://github.com/rust-vmm/vm-virtio/pull/TODO is merged
virtio-blk = { git = "https://github.com/Mic92/vm-virtio.git", features = ["backend-stdio"], rev = "d90ac73e369824ddc577f47c59e9303b1c7c8e7d"} # does no kvm operations
virtio-device = { git = "https://github.com/Mic92/vm-virtio.git", rev = "d90ac73e369824ddc577f47c59e9303b1c7c8e7d"}
virtio-queue = { git = "https://github.com/Mic92/vm-virtio.git", rev = "d90ac73e369824ddc577f47c59e9303b1c7c8e7d"}
#virtio-blk = { path = "../rust-vmm/vm-virtio/crates/devices/virtio-blk", features = ["backend-stdio"]} # does no kvm operations
#virtio-device = { path = "../rust-vmm/vm-virtio/crates/virtio-device" }
#virtio-queue = { path = "../rust-vmm/vm-virtio/crates/virtio-queue" }

#vm-virtio = { path = "src/vm-virtio", features = ["backend-stdio"] }
vm-device = { git = "https://github.com/rust-vmm/vm-device", rev = "989c315712b80a538331fe05716323f2f64abf2e" } # does no kvm operations

# src/device/virtio/ deps:
event-manager = { version = "0.2.1", features = ["remote_endpoint"] }
vmm-sys-util = "0.8.0" # only for its ::eventfd::EventFd
vm-memory = { version = "0.5.0", features = ["backend-mmap"] }
log = "0.4.6"

[patch.crates-io]
# no atomicity support
# vm-memory = { git = "https://github.com/pogobanane/vm-memory.git", rev = "ecf1d8e0fd765759559c586d83760dfaf9812a8c", features = ["backend-mmap"] }
# atomicity support
vm-memory = { git = "https://github.com/pogobanane/vm-memory.git", rev = "3846add06a58f3df2bdd0b55b4ad064c20d21f53", features = ["backend-mmap"] }
#vm-memory = { path = "../rust-vmm/vm-memory", features = ["backend-mmap"] }
