[package]
name = "vmsh"
version = "0.1.0"
authors = [
  "Jörg Thalheim <joerg@thalheim.io>",
  "Pogobanane <aenderboy@gmx.de>"
]
edition = "2018"
default-run = "vmsh"
license = "MIT"

[build-dependencies]
build-utils = { path = "src/build-utils" }

[workspace]
members = ["src/ioutils"]
exclude = [
  "src/build-utils",
  "src/stage1",
  "src/stage1-interface",
  "src/stage2",
]

[dependencies]
#elfloader = { path = "src/rust-elfloader" }
elfloader = "0.16.0"
xmas-elf = "0.8.0"
clap = { version = "4", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions"] }
ioutils = { path = "src/ioutils" }
nix = "0.26.2"
libc = "0.2.145"
bitflags = "2.3.1"
stage1-interface = { path = "src/stage1-interface" }
# required by stage1/Cargo.toml
cc = "1.0.79"
signal-hook = "0.3.15"

bcc = "0.0.33"
simple-error = "0.3.0"
kvm-bindings = "0.6.0"
env_logger = { version = "0.9.3", default-features = false }
lazy_static = "1.4.0"
container-pid = ">=0.2"
num-traits = "0.2"
num-derive = "0.3"




# src/device/ deps:
# Switch back to upstream, once https://github.com/rust-vmm/vm-virtio/pull/TODO is merged
virtio-blk = { git = "https://github.com/Mic92/vm-virtio.git", features = ["backend-stdio"], rev = "82a8e84203b00d6bab0774cc686d0f2a0998bb92"} # does no kvm operations
virtio-device = { git = "https://github.com/Mic92/vm-virtio.git", rev = "82a8e84203b00d6bab0774cc686d0f2a0998bb92"}
virtio-queue = { git = "https://github.com/Mic92/vm-virtio.git", rev = "82a8e84203b00d6bab0774cc686d0f2a0998bb92"}
#virtio-blk = { path = "../rust-vmm/vm-virtio/crates/devices/virtio-blk", features = ["backend-stdio"]} # does no kvm operations
#virtio-device = { path = "../rust-vmm/vm-virtio/crates/virtio-device" }
#virtio-queue = { path = "../rust-vmm/vm-virtio/crates/virtio-queue" }

#vm-virtio = { path = "src/vm-virtio", features = ["backend-stdio"] }
vm-device = { git = "https://github.com/rust-vmm/vm-device", rev = "d5937f60b0c5e3b0cb6cfbb3294ccd3f4dc1aa15" } # does no kvm operations

# src/device/virtio/ deps:
event-manager = { version = "0.3.0", features = ["remote_endpoint"] }
vmm-sys-util = "0.11.1" # only for its ::eventfd::EventFd
vm-memory = { version = "0.11.0", features = ["backend-mmap"] }
log = "0.4.17"

[patch.crates-io]
# no atomicity support
# vm-memory = { git = "https://github.com/pogobanane/vm-memory.git", rev = "ecf1d8e0fd765759559c586d83760dfaf9812a8c", features = ["backend-mmap"] }
# atomicity support
vm-memory = { git = "https://github.com/Mic92/vm-memory.git", rev = "2cf066e0cad4c11ee6effe03a1b12bcc346ac5b7", features = ["backend-mmap"] }

#vm-memory = { path = "../rust-vmm/vm-memory", features = ["backend-mmap"] }
