[package]
name = "stage1"
version = "0.1.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
build-utils = { path = "../build-utils" }

[dependencies]
libc = { version = "0.2.*" }
