[package]
name = "stage1"
version = "0.1.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"
license = "MIT"

[lib]
crate_type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
build-utils = { path = "../build-utils" }
cc = "1.0.73"

[dependencies]
chlorine = { version = "1.0.10", features = ["int_extras"] }
stage1-interface = { path = "../stage1-interface" }

[profile.dev]
panic = "abort"
lto = true
incremental = false
opt-level = "z"

[profile.release]
panic = "abort"
lto = true
incremental = false
opt-level = "z"
