[package]
name = "stage2"
version = "0.1.0"
authors = ["Jörg Thalheim <joerg@thalheim.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.*"

#[profile.dev]
#lto = true
#opt-level = "z"
#
#[profile.release]
#lto = true
#opt-level = "z"
