[package]
name = "virtio"
version = "0.1.0"
license = "MIT"
authors = ["Peter Okelmann <okelmann@in.tum.de>"]
edition = "2018"

[dependencies]
vm-virtio = { git = "https://github.com/Mic92/vm-virtio.git", features = ["backend-stdio"], rev = "8a8270924ad691232f9f9b3157e66fddd7ba9975"}
# kvm-ioctls = { version = "0.6.0" }

# [target.'cfg(target_arch = "x86_64")'.dependencies]
# /*cpuid = { path = "../cpuid" }*/
